--- a/src/main/resources/templates/game/game.html
+++ b/src/main/resources/templates/game/game.html
@@ -16,9 +16,8 @@
 <div class="container">
 
     <div class="starter-template">
-        <h1>Hallo</h1>
-
-        <p class="lead">Herzlich Willkommen auf dem Highscore Ranker.</p>
+        <h1 th:text="${game.name}"/>
+        <img th:src="${game.pictureUrl}"/>
     </div>
 
 </div>
