--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,15 +7,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Highscores</a>
+            <a class="navbar-brand" href="/">Highscores</a>
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
                 <li><a href="/games">Spiele</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="/logout">Logout</a></li>
             </ul>
         </div>
-        <!--/.nav-collapse -->
     </div>
 </div>
