--- a/src/main/resources/templates/game/games.html
+++ b/src/main/resources/templates/game/games.html
@@ -16,22 +16,26 @@
 <div class="container">
 
     <div class="starter-template">
+        <h1>Spiele</h1>
         <table class="table table-hover">
             <thead>
             <tr>
                 <th>Name</th>
                 <th>Beschreibung</th>
-                <th>Bild</th>
+                <th>Highscore</th>
+                <th></th>
             </tr>
             </thead>
             <tbody>
             <tr th:each="game : ${games}" class="clickable-row table-responsive">
-                <td data-th-text="${game.name}"/>
+                <td><a th:href="'/games/' + ${game.name}" th:text="${game.name}"></a></td>
                 <td data-th-text="${game.description}"/>
+                <td data-th-text="${game.highscore}"/>
                 <td><img th:src="${game.pictureUrl}" width="50px"/></td>
             </tr>
             </tbody>
-        </table>    </div>
+        </table>
+    </div>
 
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
