improve creating masks

--- a/src/main/resources/templates/game/games.html
+++ b/src/main/resources/templates/game/games.html
@@ -17,6 +17,9 @@
 
     <div class="starter-template">
         <h1>Spiele</h1>
+        <div style="margin-top: 5px">
+            <a href="/games/new"><button type="button" class="btn btn-success">Neues Spiel anlegen.</button></a>
+        </div>
         <table class="table table-hover">
             <thead>
             <tr>
