--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -19,7 +19,13 @@
         <h1>Hallo</h1>
 
         <p class="lead">Herzlich Willkommen auf dem Highscore Ranker.</p>
+        <div th:if="${hasBirthday == true}">
+            <p class="lead">Hallo, Papa. Alles gute zum Geburtstag.</p>
+        </div>
     </div>
+    <audio autoplay="true">
+        <source src="music/celebrate.mp3" type="audio/mpeg"/>
+    </audio>
 
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
