--- a/src/main/resources/templates/score/newScore.html
+++ b/src/main/resources/templates/score/newScore.html
@@ -17,14 +17,28 @@
 
     <div class="starter-template">
         <h1>Submit new Score</h1>
-        <form action="#" th:action="@{/scores}" th:object="${score}" method="post">
-            <select th:field="*{gameName}">
-                <option th:each="game : ${games}"
-                        th:value="${game.name}"
-                        th:text="${game.name}">Wireframe</option>
-            </select>
-            <input type="text" th:field="*{score}" placeholder="Score"/>
-            <button type="submit" name="create">Score</button>
+        <form action="#" th:action="@{/scores}" th:object="${score}" method="post" class="form-horizontal">
+            <div class="form-group">
+                <label class="col-lg-2 control-label">Spiel</label>
+                <div class="col-lg-3">
+                    <select th:field="*{gameName}" class="form-control" >
+                        <option th:each="game : ${games}"
+                                th:value="${game.name}"
+                                th:text="${game.name}">Wireframe</option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-lg-2 control-label">Score</label>
+                <div class="col-lg-3">
+                    <input type="text" th:field="*{score}" placeholder="Score" class="form-control" />
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-lg-offset-2 col-lg-3">
+                    <button class="btn btn-default">Score eintragen</button>
+                </div>
+            </div>
         </form>
     </div>
 
