--- a/src/main/resources/templates/score/newScore.html
+++ b/src/main/resources/templates/score/newScore.html
@@ -16,7 +16,7 @@
 <div class="container">
 
     <div class="starter-template">
-        <h1>Submit new Score</h1>
+        <h1>Neuer Score</h1>
         <form action="#" th:action="@{/scores}" th:object="${score}" method="post" class="form-horizontal">
             <div class="form-group">
                 <label class="col-lg-2 control-label">Spiel</label>
