--- a/src/main/resources/templates/game/new.html
+++ b/src/main/resources/templates/game/new.html
@@ -16,7 +16,7 @@
 <div class="container">
 
     <div class="starter-template">
-        <h1>Create new Game</h1>
+        <h1>Neues Spiel anlegen</h1>
         <form action="#" th:action="@{/games}" th:object="${game}" method="post" class="form-horizontal">
             <div class="form-group">
                 <label class="col-lg-2 control-label">Name</label>
